--- a/Backend_MiPistoHN/backend/.envexample
+++ b/Backend_MiPistoHN/backend/.envexample
@@ -1,6 +1,6 @@
 PORT = 5000
-DB_HOST = 'localhost'
-DB_USER = 'root'
-DB_PASSWORD = 'cesar'
-DB_DATABASE = 'mipistohn_db'
-JWT_SECRET = 'jwt_secret_123'
+DB_HOST = localhost
+DB_USER = root
+DB_PASSWORD = tu_contrasena
+DB_DATABASE = mipistohn_db
+JWT_SECRET = jwt_secret_123
